--- a/ssm/ssm-master/src/main/webapp/WEB-INF/web.xml
+++ b/ssm/ssm-master/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,10 @@
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath:spring/spring-*.xml</param-value>
 		</init-param>
+		<init-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>classpath:log4j.properties</param-value>
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>mvc-dispatcher</servlet-name>
