--- a/ssm/ssm-master/pom.xml
+++ b/ssm/ssm-master/pom.xml
@@ -204,6 +204,10 @@
 					<artifactId>commons-dbcp</artifactId>
 				</exclusion>
 				<exclusion>
+					<groupId>commons-lang</groupId>
+					<artifactId>commons-lang</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>jdbc</groupId>
 					<artifactId>ojdbc</artifactId>
 				</exclusion>
@@ -321,6 +325,11 @@
 		<!--<artifactId>commons-dbcp2</artifactId>-->
 		<!--<version>2.1.1</version>-->
 		<!--</dependency>-->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
@@ -523,6 +532,12 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.54</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>19.0-rc1</version>
 		</dependency>
 	</dependencies>
 
