--- a/ssm/ssm-master/pom.xml
+++ b/ssm/ssm-master/pom.xml
@@ -533,6 +533,20 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.54</version>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.7.3</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.7.3</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 
 <!--		<dependency>-->
 <!--			<groupId>com.google.guava</groupId>-->
