--- a/ssm/ssm-master/pom.xml
+++ b/ssm/ssm-master/pom.xml
@@ -634,8 +634,13 @@
 			<artifactId>dom4j</artifactId>
 			<version>1.1</version>
 		</dependency>
+        <dependency>
+            <groupId>com.eimageglobal.basis.common</groupId>
+            <artifactId>basis-common</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+        </dependency>
 
-<!--		<dependency>-->
+        <!--		<dependency>-->
 <!--			<groupId>com.google.guava</groupId>-->
 <!--			<artifactId>guava</artifactId>-->
 <!--			<version>19.0-rc1</version>-->
