--- a/ssm/ssm-master/src/main/resources/jdbc.properties
+++ b/ssm/ssm-master/src/main/resources/jdbc.properties
@@ -2,3 +2,5 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://47.98.51.132:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true
 jdbc.username=root
 jdbc.password=1234
+
+upload.path=c:/picture/
