--- a/ssm/ssm-master/src/main/resources/jdbc.properties
+++ b/ssm/ssm-master/src/main/resources/jdbc.properties
@@ -3,4 +3,4 @@ jdbc.url=jdbc:mysql://47.98.51.132:3306/test?useUnicode=true&characterEncoding=u
 jdbc.username=root
 jdbc.password=1234
 
-upload.path=c:/picture/
+upload.path=/Tomcat8/apache-tomcat-8.5.43/webapps/picture/
